--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "url": "https://github.com/kjda/react-topui/issues"
   },
   "homepage": "https://github.com/kjda/react-topui",
-  "dependencies": {
-    "react": "^0.11.1"
+  "peerDependencies": {
+    "react": "^15.0.1"
   },
   "devDependencies": {
-    "jsx-loader": "^0.11.0",
-    "webpack": "^1.3.3-beta1"
+    "babel-core": "^6.0.0",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "webpack": "^1.13.0"
   }
 }
